app-bookinfo/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: app-bookinfo
  labels:
    name: bookinfo
    istio-injection: enabled
