app-bookinfo/bookinfo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
  namespace: app-bookinfo
spec:
  hosts: 
    - bookinfo.example
  gateways:
    - bookinfo
  http:
    - match:
      - uri:
          exact: /giveme5
      fault:
        abort:
          httpStatus: 500
          percentage:
            value: 100
      route:
      - destination:
          host: productpage
    - match:
      - uri:
          exact: /
      rewrite:
        uri: /productpage
      route:
      - destination:
          port:
            number: 9080
          host: productpage
    - match:
      - uri:
          regex: '\/.+'
      route:
      - destination:
          port:
            number: 9080
          host: productpage
